# tree-sitter-forge

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file.froglet  go.mod  grammar.js  package.json  pyproject.toml  setup.py  stacks.froglet  tree-sitter.json
bindings/c/: tree-sitter-forge.pc.in  tree-sitter-froglet.pc.in
bindings/c/tree_sitter/: tree-sitter-forge.h  tree-sitter-froglet.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_forge/: __init__.py  binding.c
bindings/python/tree_sitter_froglet/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterForgeTests/: TreeSitterForgeTests.swift
bindings/swift/TreeSitterFrogletTests/: TreeSitterFrogletTests.swift
examples/: run.frg
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
