[package]
name = "tree-sitter-froglet"
description = "A more user-friendly Forge, I think."
version = "0.1.0"
authors = ["Gavin Zhao <gavinz@brown.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "froglet"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/second-last/tree-sitter-froglet"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
