[package]
name = "tree-sitter-forge"
description = "Tree-sitter parser for Forge, a language for teaching introductory formal methods and modeling."
version = "0.1.0"
authors = ["Gavin Zhao <gavinz@brown.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "forge"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/second-last/tree-sitter-forge"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
